Release 1.20.6-rc1 (snapshot)