@@ -1,79 +1,173 @@
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Lists;
+import it.unimi.dsi.fastutil.objects.ObjectArrayList;
+import java.util.Map;
+import java.util.Optional;
+import javax.annotation.Nullable;
 
-public class cle extends bvj<cla> {
+public class cle extends bvk<clb> {
    private static final int c = 4;
-   private static final int d = 256;
-   private static final int e = 5;
-   private static final int f = 4;
-   private static final float g = 0.7F;
-   private static final int h = Math.round(15.0F);
-   private static final int i = Math.round(4.0F);
-   private static final int j = Math.round(10.0F);
+   private static final int d = 10;
+   private static final int e = 2;
+   private static final int f = Math.round(10.0F);
+   private static final float g = 1.4F;
+   private static final ObjectArrayList<Integer> h = new ObjectArrayList(Lists.newArrayList(new Integer[]{40, 55, 60, 75, 80}));
 
    @VisibleForTesting
    public cle() {
-      super(ImmutableMap.of(ccu.o, ccv.a, ccu.aY, ccv.b, ccu.aW, ccv.b, ccu.aX, ccv.b, ccu.aV, ccv.a, ccu.m, ccv.b, ccu.ba, ccv.b), h + 1 + i);
+      super(Map.of(ccv.o, ccw.a, ccv.aU, ccw.b, ccv.aZ, ccw.c, ccv.ba, ccw.c, ccv.aV, ccw.b, ccv.m, ccw.b, ccv.bb, ccw.c), 200);
    }
 
-   protected boolean a(arf $$0, cla $$1) {
-      return $$1.ar() != buc.a ? false : $$1.dS().c(ccu.o).map($$1x -> b($$1, $$1x)).map($$1x -> {
-         if (!$$1x) {
-            $$1.dS().b(ccu.aV);
-         }
-
-         return $$1x;
-      }).orElse(false);
-   }
-
-   protected boolean a(arf $$0, cla $$1, long $$2) {
-      return $$1.dS().a(ccu.o) && $$1.dS().a(ccu.aV);
-   }
-
-   protected void b(arf $$0, cla $$1, long $$2) {
-      $$1.dS().c(ccu.o).ifPresent($$1x -> $$1.b(buc.q));
-      $$1.dS().a(ccu.aW, bac.a, (long)h);
-      $$1.a(awa.cG, 1.0F, 1.0F);
-   }
-
-   protected void c(arf $$0, cla $$1, long $$2) {
-      if ($$1.ar() == buc.q) {
-         $$1.b(buc.a);
-      }
-
-      $$1.dS().a(ccu.aY, bac.a, (long)j);
-      $$1.dS().b(ccu.aV);
-   }
-
-   protected void d(arf $$0, cla $$1, long $$2) {
-      bus<cla> $$3 = $$1.dS();
-      btq $$4 = $$3.c(ccu.o).orElse(null);
-      if ($$4 != null) {
-         $$1.a(fb.a.b, $$4.dn());
-         if (!$$3.c(ccu.aW).isPresent() && !$$3.c(ccu.aX).isPresent()) {
-            $$3.a(ccu.aX, bac.a, (long)i);
-            if (a($$1, $$4)) {
-               double $$5 = $$4.du() - $$1.du();
-               double $$6 = $$4.e(0.3) - $$1.e(0.5);
-               double $$7 = $$4.dA() - $$1.dA();
-               coh $$8 = new coh($$1, $$0);
-               $$1.a(awa.cJ, 1.5F, 1.0F);
-               $$8.c($$5, $$6, $$7, 0.7F, (float)(5 - $$0.al().a() * 4));
-               $$0.b($$8);
+   public static boolean a(arf $$0, clb $$1) {
+      if (!$$1.aE() && !$$1.be()) {
+         return false;
+      } else if (bye.a($$1)) {
+         return false;
+      } else if ($$1.dS().a(ccv.ba, ccw.a)) {
+         return true;
+      } else {
+         btr $$2 = $$1.dS().c(ccv.o).orElse(null);
+         if ($$2 == null) {
+            return false;
+         } else if (a($$1, $$2)) {
+            $$1.dS().b(ccv.o);
+            return false;
+         } else if (b($$1, $$2)) {
+            return false;
+         } else if (!c($$0, $$1)) {
+            return false;
+         } else {
+            iz $$3 = a($$1, cld.a($$2, $$1.el()));
+            if ($$3 == null) {
+               return false;
+            } else {
+               dse $$4 = $$0.a_($$3.d());
+               if ($$1.ak().a($$4)) {
+                  return false;
+               } else if (!cld.a($$1, $$3.b()) && !cld.a($$1, $$3.b(4).b())) {
+                  return false;
+               } else {
+                  $$1.dS().a(ccv.ba, $$3);
+                  return true;
+               }
             }
          }
       }
    }
 
-   @VisibleForTesting
-   public static boolean a(cla $$0, btq $$1) {
-      evs $$2 = $$0.f(1.0F);
-      evs $$3 = $$1.dn().d($$0.dn()).d();
-      return $$2.b($$3) > 0.5;
+   protected boolean b(arf $$0, clb $$1) {
+      return a($$0, $$1);
    }
 
-   private static boolean b(cla $$0, btq $$1) {
-      double $$2 = $$0.dn().g($$1.dn());
-      return $$2 > 4.0 && $$2 < 256.0;
+   protected boolean a(arf $$0, clb $$1, long $$2) {
+      return $$1.ar() != bud.a && !$$1.dS().a(ccv.aU);
+   }
+
+   protected void b(arf $$0, clb $$1, long $$2) {
+      if ($$1.dS().a(ccv.aZ, ccw.b)) {
+         $$1.dS().a(ccv.aZ, bac.a, (long)f);
+      }
+
+      $$1.b(bud.r);
+      $$0.a(null, $$1, awa.cE, awb.f, 1.0F, 1.0F);
+      $$1.dS().c(ccv.ba).ifPresent($$1x -> $$1.a(fb.a.b, $$1x.b()));
+   }
+
+   protected void c(arf $$0, clb $$1, long $$2) {
+      boolean $$3 = $$1.be();
+      if (!$$3 && $$1.dS().a(ccv.bb, ccw.a)) {
+         $$1.dS().b(ccv.bb);
+      }
+
+      if (a($$1)) {
+         evt $$4 = $$1.dS().c(ccv.ba).flatMap($$1x -> a($$1, $$1.el(), evt.c($$1x))).orElse(null);
+         if ($$4 == null) {
+            $$1.b(bud.a);
+            return;
+         }
+
+         if ($$3) {
+            $$1.dS().a(ccv.bb, bac.a);
+         }
+
+         $$1.a(awa.cK, 1.0F, 1.0F);
+         $$1.b(bud.g);
+         $$1.r($$1.aY);
+         $$1.q(true);
+         $$1.h($$4);
+      } else if (b($$1)) {
+         $$1.a(awa.cL, 1.0F, 1.0F);
+         $$1.b(bud.a);
+         $$1.q(false);
+         boolean $$5 = $$1.dS().a(ccv.x);
+         $$1.dS().a(ccv.aU, bac.a, $$5 ? 2L : 10L);
+         $$1.dS().a(ccv.aV, bac.a, 100L);
+      }
+   }
+
+   protected void d(arf $$0, clb $$1, long $$2) {
+      if ($$1.ar() == bud.g || $$1.ar() == bud.r) {
+         $$1.b(bud.a);
+      }
+
+      $$1.dS().b(ccv.ba);
+      $$1.dS().b(ccv.aZ);
+      $$1.dS().b(ccv.bb);
+   }
+
+   private static boolean a(clb $$0) {
+      return $$0.dS().c(ccv.aZ).isEmpty() && $$0.ar() == bud.r;
+   }
+
+   private static boolean b(clb $$0) {
+      boolean $$1 = $$0.ar() == bud.g;
+      boolean $$2 = $$0.aE();
+      boolean $$3 = $$0.be() && $$0.dS().a(ccv.bb, ccw.b);
+      return $$1 && ($$2 || $$3);
+   }
+
+   @Nullable
+   private static iz a(btr $$0, evt $$1) {
+      dbj $$2 = new dbj($$1, $$1.a(je.a, 10.0), dbj.a.a, dbj.b.a, $$0);
+      evr $$3 = $$0.dP().a($$2);
+      if ($$3.c() == evr.a.b) {
+         return iz.a($$3.e()).c();
+      } else {
+         dbj $$4 = new dbj($$1, $$1.a(je.b, 10.0), dbj.a.a, dbj.b.a, $$0);
+         evr $$5 = $$0.dP().a($$4);
+         return $$5.c() == evr.a.b ? iz.a($$5.e()).c() : null;
+      }
+   }
+
+   private static boolean a(clb $$0, btr $$1) {
+      return !$$1.a($$0, 24.0);
+   }
+
+   private static boolean b(clb $$0, btr $$1) {
+      return $$1.f($$0) - 4.0F <= 0.0F;
+   }
+
+   private static boolean c(arf $$0, clb $$1) {
+      iz $$2 = $$1.dp();
+
+      for (int $$3 = 1; $$3 <= 4; $$3++) {
+         iz $$4 = $$2.a(je.b, $$3);
+         if (!$$0.a_($$4).i() && !$$0.b_($$4).a(awv.a)) {
+            return false;
+         }
+      }
+
+      return true;
+   }
+
+   private static Optional<evt> a(clb $$0, azh $$1, evt $$2) {
+      for (int $$4 : ac.a(h, $$1)) {
+         Optional<evt> $$5 = bwo.a($$0, $$2, 1.4F, $$4, false);
+         if ($$5.isPresent()) {
+            return $$5;
+         }
+      }
+
+      return Optional.empty();
    }
 }
