@@ -4,246 +4,246 @@ import java.util.Optional;
 import java.util.OptionalInt;
 
 public class sn {
-   public static final ale<eam<?, ?>> a = si.a("crimson_fungus");
-   public static final ale<eam<?, ?>> b = si.a("crimson_fungus_planted");
-   public static final ale<eam<?, ?>> c = si.a("warped_fungus");
-   public static final ale<eam<?, ?>> d = si.a("warped_fungus_planted");
-   public static final ale<eam<?, ?>> e = si.a("huge_brown_mushroom");
-   public static final ale<eam<?, ?>> f = si.a("huge_red_mushroom");
-   public static final ale<eam<?, ?>> g = si.a("oak");
-   public static final ale<eam<?, ?>> h = si.a("dark_oak");
-   public static final ale<eam<?, ?>> i = si.a("birch");
-   public static final ale<eam<?, ?>> j = si.a("acacia");
-   public static final ale<eam<?, ?>> k = si.a("spruce");
-   public static final ale<eam<?, ?>> l = si.a("pine");
-   public static final ale<eam<?, ?>> m = si.a("jungle_tree");
-   public static final ale<eam<?, ?>> n = si.a("fancy_oak");
-   public static final ale<eam<?, ?>> o = si.a("jungle_tree_no_vine");
-   public static final ale<eam<?, ?>> p = si.a("mega_jungle_tree");
-   public static final ale<eam<?, ?>> q = si.a("mega_spruce");
-   public static final ale<eam<?, ?>> r = si.a("mega_pine");
-   public static final ale<eam<?, ?>> s = si.a("super_birch_bees_0002");
-   public static final ale<eam<?, ?>> t = si.a("super_birch_bees");
-   public static final ale<eam<?, ?>> u = si.a("swamp_oak");
-   public static final ale<eam<?, ?>> v = si.a("jungle_bush");
-   public static final ale<eam<?, ?>> w = si.a("azalea_tree");
-   public static final ale<eam<?, ?>> x = si.a("mangrove");
-   public static final ale<eam<?, ?>> y = si.a("tall_mangrove");
-   public static final ale<eam<?, ?>> z = si.a("cherry");
-   public static final ale<eam<?, ?>> A = si.a("oak_bees_0002");
-   public static final ale<eam<?, ?>> B = si.a("oak_bees_002");
-   public static final ale<eam<?, ?>> C = si.a("oak_bees_005");
-   public static final ale<eam<?, ?>> D = si.a("birch_bees_0002");
-   public static final ale<eam<?, ?>> E = si.a("birch_bees_002");
-   public static final ale<eam<?, ?>> F = si.a("birch_bees_005");
-   public static final ale<eam<?, ?>> G = si.a("fancy_oak_bees_0002");
-   public static final ale<eam<?, ?>> H = si.a("fancy_oak_bees_002");
-   public static final ale<eam<?, ?>> I = si.a("fancy_oak_bees_005");
-   public static final ale<eam<?, ?>> J = si.a("fancy_oak_bees");
-   public static final ale<eam<?, ?>> K = si.a("cherry_bees_005");
+   public static final ale<ean<?, ?>> a = si.a("crimson_fungus");
+   public static final ale<ean<?, ?>> b = si.a("crimson_fungus_planted");
+   public static final ale<ean<?, ?>> c = si.a("warped_fungus");
+   public static final ale<ean<?, ?>> d = si.a("warped_fungus_planted");
+   public static final ale<ean<?, ?>> e = si.a("huge_brown_mushroom");
+   public static final ale<ean<?, ?>> f = si.a("huge_red_mushroom");
+   public static final ale<ean<?, ?>> g = si.a("oak");
+   public static final ale<ean<?, ?>> h = si.a("dark_oak");
+   public static final ale<ean<?, ?>> i = si.a("birch");
+   public static final ale<ean<?, ?>> j = si.a("acacia");
+   public static final ale<ean<?, ?>> k = si.a("spruce");
+   public static final ale<ean<?, ?>> l = si.a("pine");
+   public static final ale<ean<?, ?>> m = si.a("jungle_tree");
+   public static final ale<ean<?, ?>> n = si.a("fancy_oak");
+   public static final ale<ean<?, ?>> o = si.a("jungle_tree_no_vine");
+   public static final ale<ean<?, ?>> p = si.a("mega_jungle_tree");
+   public static final ale<ean<?, ?>> q = si.a("mega_spruce");
+   public static final ale<ean<?, ?>> r = si.a("mega_pine");
+   public static final ale<ean<?, ?>> s = si.a("super_birch_bees_0002");
+   public static final ale<ean<?, ?>> t = si.a("super_birch_bees");
+   public static final ale<ean<?, ?>> u = si.a("swamp_oak");
+   public static final ale<ean<?, ?>> v = si.a("jungle_bush");
+   public static final ale<ean<?, ?>> w = si.a("azalea_tree");
+   public static final ale<ean<?, ?>> x = si.a("mangrove");
+   public static final ale<ean<?, ?>> y = si.a("tall_mangrove");
+   public static final ale<ean<?, ?>> z = si.a("cherry");
+   public static final ale<ean<?, ?>> A = si.a("oak_bees_0002");
+   public static final ale<ean<?, ?>> B = si.a("oak_bees_002");
+   public static final ale<ean<?, ?>> C = si.a("oak_bees_005");
+   public static final ale<ean<?, ?>> D = si.a("birch_bees_0002");
+   public static final ale<ean<?, ?>> E = si.a("birch_bees_002");
+   public static final ale<ean<?, ?>> F = si.a("birch_bees_005");
+   public static final ale<ean<?, ?>> G = si.a("fancy_oak_bees_0002");
+   public static final ale<ean<?, ?>> H = si.a("fancy_oak_bees_002");
+   public static final ale<ean<?, ?>> I = si.a("fancy_oak_bees_005");
+   public static final ale<ean<?, ?>> J = si.a("fancy_oak_bees");
+   public static final ale<ean<?, ?>> K = si.a("cherry_bees_005");
 
-   private static edz.a a(dfa $$0, dfa $$1, int $$2, int $$3, int $$4, int $$5) {
-      return new edz.a(efe.a($$0), new egg($$2, $$3, $$4), efe.a($$1), new eek(bpx.a($$5), bpx.a(0), 3), new eeh(1, 0, 1));
+   private static eea.a a(dfb $$0, dfb $$1, int $$2, int $$3, int $$4, int $$5) {
+      return new eea.a(eff.a($$0), new egh($$2, $$3, $$4), eff.a($$1), new eel(bpy.a($$5), bpy.a(0), 3), new eei(1, 0, 1));
    }
 
-   private static edz.a a() {
-      return a(dfc.U, dfc.aE, 4, 2, 0, 2).a();
+   private static eea.a a() {
+      return a(dfd.U, dfd.aE, 4, 2, 0, 2).a();
    }
 
-   private static edz.a b() {
-      return a(dfc.W, dfc.aG, 5, 2, 0, 2).a();
+   private static eea.a b() {
+      return a(dfd.W, dfd.aG, 5, 2, 0, 2).a();
    }
 
-   private static edz.a c() {
-      return a(dfc.W, dfc.aG, 5, 2, 6, 2).a();
+   private static eea.a c() {
+      return a(dfd.W, dfd.aG, 5, 2, 6, 2).a();
    }
 
-   private static edz.a d() {
-      return a(dfc.X, dfc.aH, 4, 8, 0, 2);
+   private static eea.a d() {
+      return a(dfd.X, dfd.aH, 4, 8, 0, 2);
    }
 
-   private static edz.a e() {
-      return new edz.a(efe.a(dfc.U), new egc(3, 11, 0), efe.a(dfc.aE), new eeo(bpx.a(2), bpx.a(4), 4), new eeh(0, 0, 0, OptionalInt.of(4))).a();
+   private static eea.a e() {
+      return new eea.a(eff.a(dfd.U), new egd(3, 11, 0), eff.a(dfd.aE), new eep(bpy.a(2), bpy.a(4), 4), new eei(0, 0, 0, OptionalInt.of(4))).a();
    }
 
-   private static edz.a f() {
-      return new edz.a(
-            efe.a(dfc.Z),
-            new ega(7, 1, 0, new bqh(bpf.<bqa>a().a(bpx.a(1), 1).a(bpx.a(2), 1).a(bpx.a(3), 1).a()), bqg.a(2, 4), bqg.a(-4, -3), bqg.a(-1, 0)),
-            efe.a(dfc.aJ),
-            new eem(bpx.a(4), bpx.a(0), bpx.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
-            new eeh(1, 0, 2)
+   private static eea.a f() {
+      return new eea.a(
+            eff.a(dfd.Z),
+            new egb(7, 1, 0, new bqi(bpg.<bqb>a().a(bpy.a(1), 1).a(bpy.a(2), 1).a(bpy.a(3), 1).a()), bqh.a(2, 4), bqh.a(-4, -3), bqh.a(-1, 0)),
+            eff.a(dfd.aJ),
+            new een(bpy.a(4), bpy.a(0), bpy.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
+            new eei(1, 0, 2)
          )
          .a();
    }
 
-   public static void a(rc<eam<?, ?>> $$0) {
-      jj<dfa> $$1 = $$0.a(lq.f);
-      dzc $$2 = dzc.a(
-         dfc.x,
-         dfc.y,
-         dfc.z,
-         dfc.A,
-         dfc.B,
-         dfc.C,
-         dfc.D,
-         dfc.E,
-         dfc.bR,
-         dfc.bS,
-         dfc.bT,
-         dfc.bU,
-         dfc.bV,
-         dfc.bW,
-         dfc.bX,
-         dfc.bY,
-         dfc.bZ,
-         dfc.ca,
-         dfc.cb,
-         dfc.cc,
-         dfc.cd,
-         dfc.ce,
-         dfc.cf,
-         dfc.cg,
-         dfc.cB,
-         dfc.dS,
-         dfc.fb,
-         dfc.fc,
-         dfc.fd,
-         dfc.fe,
-         dfc.fm,
-         dfc.fq,
-         dfc.fC,
-         dfc.gt,
-         dfc.gu,
-         dfc.ku,
-         dfc.kv,
-         dfc.kA,
-         dfc.kB,
-         dfc.kD,
-         dfc.oi,
-         dfc.oo,
-         dfc.ox,
-         dfc.oz,
-         dfc.oA,
-         dfc.oB,
-         dfc.oC,
-         dfc.sv,
-         dfc.sw,
-         dfc.sx,
-         dfc.sy,
-         dfc.sz,
-         dfc.sA,
-         dfc.sB,
-         dfc.sD,
-         dfc.sE,
-         dfc.sF
+   public static void a(rc<ean<?, ?>> $$0) {
+      jj<dfb> $$1 = $$0.a(lq.f);
+      dzd $$2 = dzd.a(
+         dfd.x,
+         dfd.y,
+         dfd.z,
+         dfd.A,
+         dfd.B,
+         dfd.C,
+         dfd.D,
+         dfd.E,
+         dfd.bR,
+         dfd.bS,
+         dfd.bT,
+         dfd.bU,
+         dfd.bV,
+         dfd.bW,
+         dfd.bX,
+         dfd.bY,
+         dfd.bZ,
+         dfd.ca,
+         dfd.cb,
+         dfd.cc,
+         dfd.cd,
+         dfd.ce,
+         dfd.cf,
+         dfd.cg,
+         dfd.cB,
+         dfd.dS,
+         dfd.fb,
+         dfd.fc,
+         dfd.fd,
+         dfd.fe,
+         dfd.fm,
+         dfd.fq,
+         dfd.fC,
+         dfd.gt,
+         dfd.gu,
+         dfd.ku,
+         dfd.kv,
+         dfd.kA,
+         dfd.kB,
+         dfd.kD,
+         dfd.oi,
+         dfd.oo,
+         dfd.ox,
+         dfd.oz,
+         dfd.oA,
+         dfd.oB,
+         dfd.oC,
+         dfd.sv,
+         dfd.sw,
+         dfd.sx,
+         dfd.sy,
+         dfd.sz,
+         dfd.sA,
+         dfd.sB,
+         dfd.sD,
+         dfd.sE,
+         dfd.sF
       );
-      si.a($$0, a, eaz.U, new ebi(dfc.ow.o(), dfc.os.o(), dfc.kK.o(), dfc.oy.o(), $$2, false));
-      si.a($$0, b, eaz.U, new ebi(dfc.ow.o(), dfc.os.o(), dfc.kK.o(), dfc.oy.o(), $$2, true));
-      si.a($$0, c, eaz.U, new ebi(dfc.on.o(), dfc.oj.o(), dfc.op.o(), dfc.oy.o(), $$2, false));
-      si.a($$0, d, eaz.U, new ebi(dfc.on.o(), dfc.oj.o(), dfc.op.o(), dfc.oy.o(), $$2, true));
+      si.a($$0, a, eba.U, new ebj(dfd.ow.o(), dfd.os.o(), dfd.kK.o(), dfd.oy.o(), $$2, false));
+      si.a($$0, b, eba.U, new ebj(dfd.ow.o(), dfd.os.o(), dfd.kK.o(), dfd.oy.o(), $$2, true));
+      si.a($$0, c, eba.U, new ebj(dfd.on.o(), dfd.oj.o(), dfd.op.o(), dfd.oy.o(), $$2, false));
+      si.a($$0, d, eba.U, new ebj(dfd.on.o(), dfd.oj.o(), dfd.op.o(), dfd.oy.o(), $$2, true));
       si.a(
          $$0,
          e,
-         eaz.r,
-         new edf(
-            efe.a(dfc.eT.o().a(dix.f, Boolean.valueOf(true)).a(dix.g, Boolean.valueOf(false))),
-            efe.a(dfc.eV.o().a(dix.f, Boolean.valueOf(false)).a(dix.g, Boolean.valueOf(false))),
+         eba.r,
+         new edg(
+            eff.a(dfd.eT.o().a(diy.f, Boolean.valueOf(true)).a(diy.g, Boolean.valueOf(false))),
+            eff.a(dfd.eV.o().a(diy.f, Boolean.valueOf(false)).a(diy.g, Boolean.valueOf(false))),
             3
          )
       );
       si.a(
          $$0,
          f,
-         eaz.q,
-         new edf(efe.a(dfc.eU.o().a(dix.g, Boolean.valueOf(false))), efe.a(dfc.eV.o().a(dix.f, Boolean.valueOf(false)).a(dix.g, Boolean.valueOf(false))), 2)
+         eba.q,
+         new edg(eff.a(dfd.eU.o().a(diy.g, Boolean.valueOf(false))), eff.a(dfd.eV.o().a(diy.f, Boolean.valueOf(false)).a(diy.g, Boolean.valueOf(false))), 2)
       );
-      efs $$3 = new efs(0.002F);
-      efs $$4 = new efs(0.01F);
-      efs $$5 = new efs(0.02F);
-      efs $$6 = new efs(0.05F);
-      efs $$7 = new efs(1.0F);
-      si.a($$0, g, eaz.f, a().c());
+      eft $$3 = new eft(0.002F);
+      eft $$4 = new eft(0.01F);
+      eft $$5 = new eft(0.02F);
+      eft $$6 = new eft(0.05F);
+      eft $$7 = new eft(1.0F);
+      si.a($$0, g, eba.f, a().c());
       si.a(
          $$0,
          h,
-         eaz.f,
-         new edz.a(efe.a(dfc.aa), new egb(6, 2, 1), efe.a(dfc.aK), new een(bpx.a(0), bpx.a(0)), new eeg(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
+         eba.f,
+         new eea.a(eff.a(dfd.aa), new egc(6, 2, 1), eff.a(dfd.aK), new eeo(bpy.a(0), bpy.a(0)), new eeh(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
       );
-      si.a($$0, i, eaz.f, b().c());
-      si.a($$0, j, eaz.f, new edz.a(efe.a(dfc.Y), new egd(5, 2, 2), efe.a(dfc.aI), new eej(bpx.a(2), bpx.a(0)), new eeh(1, 0, 2)).a().c());
-      si.a($$0, z, eaz.f, f().c());
-      si.a($$0, K, eaz.f, f().a(List.of($$6)).c());
-      si.a($$0, k, eaz.f, new edz.a(efe.a(dfc.V), new egg(5, 2, 1), efe.a(dfc.aF), new eev(bqg.a(2, 3), bqg.a(0, 2), bqg.a(1, 2)), new eeh(2, 0, 2)).a().c());
-      si.a($$0, l, eaz.f, new edz.a(efe.a(dfc.V), new egg(6, 4, 0), efe.a(dfc.aF), new eet(bpx.a(1), bpx.a(1), bqg.a(3, 4)), new eeh(2, 0, 2)).a().c());
-      si.a($$0, m, eaz.f, d().a(ImmutableList.of(new eft(0.2F), efx.b, new efu(0.25F))).a().c());
-      si.a($$0, n, eaz.f, e().c());
-      si.a($$0, o, eaz.f, d().a().c());
+      si.a($$0, i, eba.f, b().c());
+      si.a($$0, j, eba.f, new eea.a(eff.a(dfd.Y), new ege(5, 2, 2), eff.a(dfd.aI), new eek(bpy.a(2), bpy.a(0)), new eei(1, 0, 2)).a().c());
+      si.a($$0, z, eba.f, f().c());
+      si.a($$0, K, eba.f, f().a(List.of($$6)).c());
+      si.a($$0, k, eba.f, new eea.a(eff.a(dfd.V), new egh(5, 2, 1), eff.a(dfd.aF), new eew(bqh.a(2, 3), bqh.a(0, 2), bqh.a(1, 2)), new eei(2, 0, 2)).a().c());
+      si.a($$0, l, eba.f, new eea.a(eff.a(dfd.V), new egh(6, 4, 0), eff.a(dfd.aF), new eeu(bpy.a(1), bpy.a(1), bqh.a(3, 4)), new eei(2, 0, 2)).a().c());
+      si.a($$0, m, eba.f, d().a(ImmutableList.of(new efu(0.2F), efy.b, new efv(0.25F))).a().c());
+      si.a($$0, n, eba.f, e().c());
+      si.a($$0, o, eba.f, d().a().c());
       si.a(
          $$0,
          p,
-         eaz.f,
-         new edz.a(efe.a(dfc.X), new egf(10, 2, 19), efe.a(dfc.aH), new eer(bpx.a(2), bpx.a(0), 2), new eeh(1, 1, 2))
-            .a(ImmutableList.of(efx.b, new efu(0.25F)))
+         eba.f,
+         new eea.a(eff.a(dfd.X), new egg(10, 2, 19), eff.a(dfd.aH), new ees(bpy.a(2), bpy.a(0), 2), new eei(1, 1, 2))
+            .a(ImmutableList.of(efy.b, new efv(0.25F)))
             .c()
       );
       si.a(
          $$0,
          q,
-         eaz.f,
-         new edz.a(efe.a(dfc.V), new ege(13, 2, 14), efe.a(dfc.aF), new ees(bpx.a(0), bpx.a(0), bqg.a(13, 17)), new eeh(1, 1, 2))
-            .a(ImmutableList.of(new efq(efe.a(dfc.l))))
+         eba.f,
+         new eea.a(eff.a(dfd.V), new egf(13, 2, 14), eff.a(dfd.aF), new eet(bpy.a(0), bpy.a(0), bqh.a(13, 17)), new eei(1, 1, 2))
+            .a(ImmutableList.of(new efr(eff.a(dfd.l))))
             .c()
       );
       si.a(
          $$0,
          r,
-         eaz.f,
-         new edz.a(efe.a(dfc.V), new ege(13, 2, 14), efe.a(dfc.aF), new ees(bpx.a(0), bpx.a(0), bqg.a(3, 7)), new eeh(1, 1, 2))
-            .a(ImmutableList.of(new efq(efe.a(dfc.l))))
+         eba.f,
+         new eea.a(eff.a(dfd.V), new egf(13, 2, 14), eff.a(dfd.aF), new eet(bpy.a(0), bpy.a(0), bqh.a(3, 7)), new eei(1, 1, 2))
+            .a(ImmutableList.of(new efr(eff.a(dfd.l))))
             .c()
       );
-      si.a($$0, s, eaz.f, c().a(ImmutableList.of($$3)).c());
-      si.a($$0, t, eaz.f, c().a(ImmutableList.of($$7)).c());
-      si.a($$0, u, eaz.f, a(dfc.U, dfc.aE, 5, 3, 0, 3).a(ImmutableList.of(new efu(0.25F))).c());
-      si.a($$0, v, eaz.f, new edz.a(efe.a(dfc.X), new egg(1, 0, 0), efe.a(dfc.aE), new eel(bpx.a(2), bpx.a(1), 2), new eeh(0, 0, 0)).c());
+      si.a($$0, s, eba.f, c().a(ImmutableList.of($$3)).c());
+      si.a($$0, t, eba.f, c().a(ImmutableList.of($$7)).c());
+      si.a($$0, u, eba.f, a(dfd.U, dfd.aE, 5, 3, 0, 3).a(ImmutableList.of(new efv(0.25F))).c());
+      si.a($$0, v, eba.f, new eea.a(eff.a(dfd.X), new egh(1, 0, 0), eff.a(dfd.aE), new eem(bpy.a(2), bpy.a(1), 2), new eei(0, 0, 0)).c());
       si.a(
          $$0,
          w,
-         eaz.f,
-         new edz.a(
-               efe.a(dfc.U),
-               new efz(4, 2, 0, 3, bqg.a(1, 2)),
-               new efo(bpf.<dsd>a().a(dfc.aM.o(), 3).a(dfc.aN.o(), 1)),
-               new eeu(bpx.a(3), bpx.a(0), bpx.a(2), 50),
-               new eeh(1, 0, 1)
+         eba.f,
+         new eea.a(
+               eff.a(dfd.U),
+               new ega(4, 2, 0, 3, bqh.a(1, 2)),
+               new efp(bpg.<dse>a().a(dfd.aM.o(), 3).a(dfd.aN.o(), 1)),
+               new eev(bpy.a(3), bpy.a(0), bpy.a(2), 50),
+               new eei(1, 0, 1)
             )
-            .a(efe.a(dfc.sH))
+            .a(eff.a(dfd.sH))
             .b()
             .c()
       );
       si.a(
          $$0,
          x,
-         eaz.f,
-         new edz.a(
-               efe.a(dfc.ab),
-               new egj(2, 1, 4, bqg.a(1, 4), 0.5F, bqg.a(0, 1), $$1.b(awp.cj)),
-               efe.a(dfc.aL),
-               new eeu(bpx.a(3), bpx.a(0), bpx.a(2), 70),
+         eba.f,
+         new eea.a(
+               eff.a(dfd.ab),
+               new egk(2, 1, 4, bqh.a(1, 4), 0.5F, bqh.a(0, 1), $$1.b(awp.cj)),
+               eff.a(dfd.aL),
+               new eev(bpy.a(3), bpy.a(0), bpy.a(2), 70),
                Optional.of(
-                  new efa(
-                     bqg.a(1, 3),
-                     efe.a(dfc.ac),
-                     Optional.of(new eey(efe.a(dfc.sA), 0.5F)),
-                     new eez($$1.b(awp.ck), jm.a(dfa::s, dfc.sI, dfc.ad), efe.a(dfc.ad), 8, 15, 0.2F)
+                  new efb(
+                     bqh.a(1, 3),
+                     eff.a(dfd.ac),
+                     Optional.of(new eez(eff.a(dfd.sA), 0.5F)),
+                     new efa($$1.b(awp.ck), jm.a(dfb::s, dfd.sI, dfd.ad), eff.a(dfd.ad), 8, 15, 0.2F)
                   )
                ),
-               new eeh(2, 0, 2)
+               new eei(2, 0, 2)
             )
             .a(
                List.of(
-                  new efu(0.125F), new efr(0.14F, 1, 0, new efk(efe.a(dfc.E.o().a(djv.d, Boolean.valueOf(true))), djv.b, bqg.a(0, 4)), 2, List.of(je.a)), $$4
+                  new efv(0.125F), new efs(0.14F, 1, 0, new efl(eff.a(dfd.E.o().a(djw.d, Boolean.valueOf(true))), djw.b, bqh.a(0, 4)), 2, List.of(je.a)), $$4
                )
             )
             .a()
@@ -252,39 +252,39 @@ public class sn {
       si.a(
          $$0,
          y,
-         eaz.f,
-         new edz.a(
-               efe.a(dfc.ab),
-               new egj(4, 1, 9, bqg.a(1, 6), 0.5F, bqg.a(0, 1), $$1.b(awp.cj)),
-               efe.a(dfc.aL),
-               new eeu(bpx.a(3), bpx.a(0), bpx.a(2), 70),
+         eba.f,
+         new eea.a(
+               eff.a(dfd.ab),
+               new egk(4, 1, 9, bqh.a(1, 6), 0.5F, bqh.a(0, 1), $$1.b(awp.cj)),
+               eff.a(dfd.aL),
+               new eev(bpy.a(3), bpy.a(0), bpy.a(2), 70),
                Optional.of(
-                  new efa(
-                     bqg.a(3, 7),
-                     efe.a(dfc.ac),
-                     Optional.of(new eey(efe.a(dfc.sA), 0.5F)),
-                     new eez($$1.b(awp.ck), jm.a(dfa::s, dfc.sI, dfc.ad), efe.a(dfc.ad), 8, 15, 0.2F)
+                  new efb(
+                     bqh.a(3, 7),
+                     eff.a(dfd.ac),
+                     Optional.of(new eez(eff.a(dfd.sA), 0.5F)),
+                     new efa($$1.b(awp.ck), jm.a(dfb::s, dfd.sI, dfd.ad), eff.a(dfd.ad), 8, 15, 0.2F)
                   )
                ),
-               new eeh(3, 0, 2)
+               new eei(3, 0, 2)
             )
             .a(
                List.of(
-                  new efu(0.125F), new efr(0.14F, 1, 0, new efk(efe.a(dfc.E.o().a(djv.d, Boolean.valueOf(true))), djv.b, bqg.a(0, 4)), 2, List.of(je.a)), $$4
+                  new efv(0.125F), new efs(0.14F, 1, 0, new efl(eff.a(dfd.E.o().a(djw.d, Boolean.valueOf(true))), djw.b, bqh.a(0, 4)), 2, List.of(je.a)), $$4
                )
             )
             .a()
             .c()
       );
-      si.a($$0, A, eaz.f, a().a(List.of($$3)).c());
-      si.a($$0, B, eaz.f, a().a(List.of($$5)).c());
-      si.a($$0, C, eaz.f, a().a(List.of($$6)).c());
-      si.a($$0, D, eaz.f, b().a(List.of($$3)).c());
-      si.a($$0, E, eaz.f, b().a(List.of($$5)).c());
-      si.a($$0, F, eaz.f, b().a(List.of($$6)).c());
-      si.a($$0, G, eaz.f, e().a(List.of($$3)).c());
-      si.a($$0, H, eaz.f, e().a(List.of($$5)).c());
-      si.a($$0, I, eaz.f, e().a(List.of($$6)).c());
-      si.a($$0, J, eaz.f, e().a(List.of($$7)).c());
+      si.a($$0, A, eba.f, a().a(List.of($$3)).c());
+      si.a($$0, B, eba.f, a().a(List.of($$5)).c());
+      si.a($$0, C, eba.f, a().a(List.of($$6)).c());
+      si.a($$0, D, eba.f, b().a(List.of($$3)).c());
+      si.a($$0, E, eba.f, b().a(List.of($$5)).c());
+      si.a($$0, F, eba.f, b().a(List.of($$6)).c());
+      si.a($$0, G, eba.f, e().a(List.of($$3)).c());
+      si.a($$0, H, eba.f, e().a(List.of($$5)).c());
+      si.a($$0, I, eba.f, e().a(List.of($$6)).c());
+      si.a($$0, J, eba.f, e().a(List.of($$7)).c());
    }
 }
